# align_reads

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  align_reads_gen.cpp  build.sh  setup.py
.github/workflows/: cmake.yml
include/: align_reads.hpp  feature_generator.hpp  types.hpp
include/align_reads/: AlignCounter.hpp  Aligner.hpp  AlignmentSegment.hpp  Converter.hpp  CountsConverter.hpp  Generator.hpp  IndexedSequences.hpp  Inputs.hpp  MultiAlignment.hpp  Overlapper.hpp  Types.hpp  Utilities.hpp  aligner.hpp  feature_generator.hpp
include/biosoup/: nucleic_acid.hpp  overlap.hpp
src/: AlignCounter.cpp  Aligner.cpp  AlignmentSegment.cpp  Converter.cpp  CountsConverter.cpp  Generator.cpp  IndexedSequences.cpp  Inputs.cpp  MultiAlignment.cpp  Overlapper.cpp  Types.cpp  align_reads.cpp  aligner.cpp  feature_generator.cpp
test_data/: align_reverse.fasta  fake_haplotype0.fasta  fake_haplotype1.fasta  fake_reads0.fasta  fake_reads1.fasta  fake_reads1.fasta.fai  overlap.paf  reads.fasta  reads_align.fasta  real_overlapping.fasta
tests/: AlignCounter_test.cpp  Aligner_test.cpp  AlignmentSegment_test.cpp  Converter_test.cpp  Generator_tests.cpp  IndexedSequences_test.cpp  Inputs_tests.cpp  MultiAlignment_test.cpp  Overlapper_tests.cpp  Types_test.cpp  Utilities_test.cpp  basic_tests.cpp  tests.cpp
